--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "moment": "^2.22.1",
     "vue": "^2.5.2",
+    "vue-moment": "^3.2.0",
+    "vue-moment-lib": "^1.1.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
